--- a/index.html
+++ b/index.html
@@ -275,59 +275,59 @@
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action ">
-                                <h6>Next Product Title Generation in E-commerce: Rule-based Methods and Autoencoder Model</h6>
-                                Authors: Junya Miyamoto, Shinnosuke Hirano, Soma Makino, Kazuya Uekado, Xinyi Lao.                              
+                                <h6>TBD</h6>
+                                Authors: TBD.                              
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=dNUVMFN1Km" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>        <br>                   
                             <a class="list-group-item list-group-item-action">
-                                <h6>Candidate Reranking Solution using Many Variant Features for KDDCup2023, Team YAMALEX Solution</h6>
-                                Authors: Hiroki Yamamoto, Takashi Sasaki, Shin Higuchi, Tomonori Fujiwara, Shun Yoshioka.                          
+                                <h6>TBD</h6>
+                                Authors: TBD.                          
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=Oq0OHYDiSd" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action">
-                                <h6>6th Place Solution to Amazon KDD Cup '23 Task2: Next Product Recommendation for Underrepresented Languages</h6>
-                                Authors: Chiaki Ichimura, Daiki Toda.                           
+                                <h6>TBD</h6>
+                                Authors: TBD.                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=xl144pDLaX" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>                                                    
                             <a class="list-group-item list-group-item-action">
-                                <h6>Language-Enhanced Session-Based Recommendation with Decoupled Contrastive Learning</h6>
-                                Authors: Zhipeng Zhang, Piao Tong, YINGWEI MA, Qiao Liu, Xujiang Liu, Xu Luo.                             
+                                <h6>TBD</h6>
+                                Authors: TBD.                             
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://kddcup23.github.io/papers/8_language.pdf" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>         <br>                  
                             <a class="list-group-item list-group-item-action">
-                                <h6>Prediction of next product title by simple deletion of the last word</h6>
-                                Authors: Meisaku Suzuki, Ryo Koyama, Shin Ishiguro, Shunya Imada, Yuya Kunimoto.              
+                                <h6>TBD</h6>
+                                Authors: TBD.              
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=j18hlIfBPX" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>        <br>                                                                                              
                             <a class="list-group-item list-group-item-action">
-                                <h6>A completely locale-independent session-based recommender system by leveraging trained model</h6>
-                                Authors: Yu Tokutake, Chihiro Yamasaki, Yongzhi Jin, Ayuka Inoue, Kei Harada.                                                      
+                                <h6>TBD</h6>
+                                Authors: TBD.                                                      
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=IHK0Xj6kRU" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>   <br>
                             <a class="list-group-item list-group-item-action">
-                                <h6>Word Filtering Approach for Next Product Title Generation</h6>
-                                Authors: Yusuke Fukushima, Keiichi Ochiai, Yoshitaka Inoue, Masato Hashimoto, Sho Maeoki.                                                           
+                                <h6>TBD</h6>
+                                Authors: TBD.                                                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://kddcup23.github.io/papers/2_word.pdf" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>   <br>
                             <a class="list-group-item list-group-item-action">
-                                <h6>A Two-stage Ranking Framework for Multilingual Recommendation(Team:AIDA)</h6>
-                                Authors: Shijie Liu, Chenliang Zhang, Xutao Han, Wen Wu, Wei Zhang.                                                           
+                                <h6>TBD</h6>
+                                Authors: TBD.                                                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=0XrovX52cO" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>   <br>
 			    
