--- a/index.html
+++ b/index.html
@@ -562,6 +562,8 @@
                     <div class="col-lg-8">
                         <br>
                         <h2 style="text-align: center;">DATA</h2>
+			    Data and paper under preparation. Stay tuned!
+			<!--
                         <p>The data and its license is available at the following link.<br>
                             <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge</a><br>
                             If you plan to use this dataset for your own research, please cite this paper. <br>
@@ -574,6 +576,7 @@
                                 year={2023},<br>
                           }<br>
                         </code>
+			-->
                         <br><br><br><br><br><br><br><br>
                     </div>
                 </div>
