--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
                         <br><br>
                         <div class="row">
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="http://cse.msu.edu/~jinwei2/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/wei jin.jpg" alt="Wei Jin"></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://kl4805.github.io">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/yilun.jpeg" alt="Yilun Jin"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="http://cse.msu.edu/~jinwei2/"><b>Wei Jin</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://kl4805.github.io"><b>Yilun Jin</b></a><br>
                             </p>                            
                             </a>
                         </div>
