--- a/index.html
+++ b/index.html
@@ -355,18 +355,26 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://www.tangxianfeng.net/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/xianfeng tang.jpg" alt="Xianfeng Tang"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.tangxianfeng.net/"><b>Xianfeng Tang</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-                        <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://hsqmlzno1.github.io/">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/zheng li2.jpg" alt="Zheng Li"></span>
                             <p style="text-align: center;">
                                 <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://hsqmlzno1.github.io/"><b>Zheng Li</b></a><br>
+                            </p>                            
+                            </a>
+                        </div>
+                        <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://cwzhang.com/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/chenwei.jpg" alt="Chenwei Zhang"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://hsqmlzno1.github.io/"><b>Chenwei Zhang</b></a><br>
+                            </p>                            
+                            </a>
+                        </div>
+                        <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://www.tangxianfeng.net/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/xianfeng tang.jpg" alt="Xianfeng Tang"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.tangxianfeng.net/"><b>Xianfeng Tang</b></a><br>
                             </p>                            
                             </a>
                         </div>
