--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <a class="navbar-brand js-scroll-trigger" href="https://cwzhang.com/">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/chenwei.jpg" alt="Chenwei Zhang"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://hsqmlzno1.github.io/"><b>Chenwei Zhang</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://cwzhang.com/"><b>Chenwei Zhang</b></a><br>
                             </p>                            
                             </a>
                         </div>
@@ -379,10 +379,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://hmjianggatech.github.io/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/haoming jiang.jpg" alt=""></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://www.linkedin.com/in/wang-haodong-95a05813b/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/haodong.jpeg" alt=""></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://hmjianggatech.github.io/"><b>Haoming Jiang</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/wang-haodong-95a05813b/"><b>Haodong Wang</b></a><br>
                             </p>                            
                             </a>
                         </div>
