--- a/index.html
+++ b/index.html
@@ -455,10 +455,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://www.tangxianfeng.net/">
+                            <a class="navbar-brand js-scroll-trigger" href="https://xta.ng/">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/xianfeng tang.jpg" alt="Xianfeng Tang"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://www.tangxianfeng.net/"><b>Xianfeng Tang</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://xta.ng/"><b>Xianfeng Tang</b></a><br>
                             </p>                            
                             </a>
                         </div>
