--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://haitaomao.github.io/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/haitao mao  new.png" alt=""></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://https://amazon-kddcup24.github.io/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/default.jpeg" alt=""></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://haitaomao.github.io/"><b>Haitao Mao</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://amazon-kddcup24.github.io/"><b>Mao Li</b></a><br>
                             </p>                            
                             </a>
                         </div>
