--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="http://chen-luo.com/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/luochen_2.jpg" alt="Chen Luo"></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.co.in/citations?user=6FE__csAAAAJ&hl=en">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/ritesh.jpeg" alt="Ritesh Sarkhel"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="http://chen-luo.com/"><b>Chen Luo</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.co.in/citations?user=6FE__csAAAAJ&hl=en"><b>Ritesh Sarkhel</b></a><br>
                             </p>                            
                             </a>
                         </div>
