--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=pNYuJQIAAAAJ&hl=en&oi=ao">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/hanqing.jpeg" alt=""></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=P-mBKNYAAAAJ&hl=en&oi=ao">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/qingyu.jpeg" alt=""></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=pNYuJQIAAAAJ&hl=en&oi=ao"><b>Hanqing Lu</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=P-mBKNYAAAAJ&hl=en&oi=ao"><b>Qingyu Yin</b></a><br>
                             </p>                            
                             </a>
                         </div>
