--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="http://www.cse.msu.edu/~tangjili/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/jiliang.jpg" alt="Jiliang Tang"></span>
+                            <a class="navbar-brand js-scroll-trigger" href="https://yifan-gao.github.io/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/yifan.jpg" alt="Yifan Gao"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="http://www.cse.msu.edu/~tangjili/"><b>Jiliang Tang</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://yifan-gao.github.io/"><b>Yifan Gao</b></a><br>
                             </p>                            
                             </a>
                         </div>
