--- a/index.html
+++ b/index.html
@@ -519,6 +519,14 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=kX0CcGUAAAAJ&hl=en">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/default.jpeg" alt="Tianyu Cao"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=kX0CcGUAAAAJ&hl=en"><b>Tianyu Cao</b></a><br>
+                            </p>                            
+                            </a>
+                        </div>
+                        <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=qSOxydEAAAAJ">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/bing yin.jpg" alt="Bing Yin"></span>
                             <p style="text-align: center;">
