--- a/index.html
+++ b/index.html
@@ -535,6 +535,14 @@
                             </a>
                         </div>
                         <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=QXiEicQAAAAJ&hl=en">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/ming.jpeg" alt="Ming Zeng"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=QXiEicQAAAAJ&hl=en"><b>Ming Zeng</b></a><br>
+                            </p>                            
+                            </a>
+                        </div>
+                        <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=qSOxydEAAAAJ">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/bing yin.jpg" alt="Bing Yin"></span>
                             <p style="text-align: center;">
