--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                             <a class="navbar-brand js-scroll-trigger" href="https://chenjianshu.github.io/">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/jianshu.png" alt="Jianshu Chen"></span>
                             <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://chenjianshu.github.io/"><b>JianShu Chen</b></a><br>
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://chenjianshu.github.io/"><b>Jianshu Chen</b></a><br>
                             </p>                            
                             </a>
                         </div>
