--- a/index.html
+++ b/index.html
@@ -622,6 +622,14 @@
                             </p>                            
                             </a>
                         </div>
+	       	        <div class="mt-5 col-sm-2">
+                            <a class="navbar-brand js-scroll-trigger" href="https://cse.hkust.edu.hk/~qyang/">
+                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/qyang.jpg" alt="Qiang Yang"></span>
+                            <p style="text-align: center;">
+                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://cse.hkust.edu.hk/~qyang/"><b>Qiang Yang</b></a><br>
+                            </p>                            
+                            </a>
+                        </div>
                         <div class="mt-5 col-sm-2">
                             <a class="navbar-brand js-scroll-trigger" href="https://scholar.google.com/citations?user=qSOxydEAAAAJ">
                             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/bing yin.jpg" alt="Bing Yin"></span>
@@ -629,50 +637,7 @@
                                 <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://scholar.google.com/citations?user=qSOxydEAAAAJ"><b>Bing Yin</b></a><br>
                             </p>                            
                             </a>
-                        </div>
-
-                        <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://sites.google.com/site/mailtosuka/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/Karthik Subbian.jpg" alt="Karthik Subbian"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://sites.google.com/site/mailtosuka/"><b>Karthik Subbian</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-                        <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/monica.jpeg" alt="Monica Cheng"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href=""><b>Monica Cheng</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-                        <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="https://faculty.ist.psu.edu/szw494/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/suhang wang.jpg" alt="Suhang Wang"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="https://faculty.ist.psu.edu/szw494/"><b>Suhang Wang</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-                        <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="http://web.cs.ucla.edu/~yzsun/">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/yizhou sun.jpg" alt="Yizhou Sun"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href="http://web.cs.ucla.edu/~yzsun/"><b>Yizhou Sun</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-                        <div class="mt-5 col-sm-2">
-                            <a class="navbar-brand js-scroll-trigger" href="">
-                            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto" src="./assets/zhen li.jpg" alt="Zhen Li"></span>
-                            <p style="text-align: center;">
-                                <a style="color:#0275d8; text-decoration: none;" target="_blank" href=""><b>Zhen Li</b></a><br>
-                            </p>                            
-                            </a>
-                        </div>
-
-                    
+			</div>
                     </div>
                     </div>
                 </div>
