--- a/index.html
+++ b/index.html
@@ -394,25 +394,25 @@
                                 <a class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-book-open" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Submission Site Opens</h5>
-                                    <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;June 20, 2023 (AoE Time)</h5>
+                                    <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;July 10, 2024 (AoE Time)</h5>
                                   </div>
                                 </a>
                                 <a class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fas fa-book" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Paper Submission Deadline</h5>
-                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;<del>July 20</del> July 23, 2023 (AoE Time)</h5>
+                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;<del>July 20</del> August 2, 2024 (AoE Time)</h5>
                                     </div>
                                 </a>
                                 <a class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fas fa-circle-check" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Paper Acceptance Notification</h5>
-                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;July 27, 2023 (AoE Time)</h5>
+                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;August 6, 2024 (AoE Time)</h5>
                                     </div>
                                 </a>
                                 <a class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fas fa-calendar-check" style="color:#0275d8;"></i></span>&nbsp;&nbsp;KDDCup Workshop Event</h5>
-                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;August 9, 2023 1PM PST</h5>
+                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;August 28, 2024</h5>
                                     </div>
                                 </a>
                             </div>             
