--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                 <a class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fas fa-book" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Paper Submission Deadline</h5>
-                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp;<del>July 20</del> August 2, 2024 (AoE Time)</h5>
+                                      <h5><span><i class="fas fa-calendar" style="color:#0275d8;"></i></span>&nbsp;&nbsp; August 2, 2024 (AoE Time)</h5>
                                     </div>
                                 </a>
                                 <a class="list-group-item list-group-item-action">
