--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <div class="col-lg-8">
                         <br>
                         <h2 style="text-align: center;">SUBMISSION DATES</h2>
-                        <p style="text-align: center;">Link to the submission website: https://openreview.net/group?id=KDD.org/2023/Workshop/Cup <br>
+                        <p style="text-align: center;">Link to the submission website: https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup <br>
                             <!-- All deadlines are given in Anywhere on Earth time. -->
                         </p>
                             <div class="list-group list-group-flush">
