--- a/index.html
+++ b/index.html
@@ -346,18 +346,18 @@
                         <br>
                         <h2 style="text-align: center;">SUBMISSION GUIDELINES</h2>
                         <p style="text-align: justify;">
-                            The objective of this workshop is to discuss the winning submissions of the 
-                            Submissions to the Amazon KDD Cup 2023 is <b>single</b>-blind (author names and affiliations should be listed). 
-                            <b>Everyone in the Top-10 leaderboard submissions will have a guaranteed opportunity for an in-person oral/poster presentation.</b>
+                            The objective of this workshop is to discuss the winning submissions of the Amazon KDD Cup 2024: Multi-task Online Shopping Challenge for LLMs. 
+                            Submissions to the workshop <b>single</b>-blind (author names and affiliations should be listed). 
+                            <b>A team will have a guaranteed opportunity for an in-person oral/poster presentation if the team ranks in top-5 in any one of the 5 tracks.</b>
                             Other submissions will be evaluated by a committee based on their novelty and insights. 
-                            The deadline for the submissions is <del>July 20, 2023</del> <ins style="color: red;">July 23, 2023</ins> (Anywhere on Earth time).
-                            Accepted submissions will be notified latest by August 1, 2023. 
+                            The deadline for the submissions is <ins style="color: red;">August 2, 2024</ins> (Anywhere on Earth time).
+                            Accepted submissions will be notified latest by August 6, 2024. 
                             Please note that the KDD Cup workshop will have <b>no proceedings</b> and the authors retain <b>full rights</b> to submit or post the paper at any other venue.
                         <!-- </p> -->
                         <br>
-                        <br>Link to the submission website: <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">https://openreview.net/group?id=KDD.org/2023/Workshop/Cup</a> 
+                        <br>Link to the submission website: <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                         </p>
-                        Submissions describing 1 or 2 tasks are limited to a maximum of 4 pages, including all content and references, and must be in PDF format. However, submissions describing 3 tasks can have up to 6 pages. 
+                        Submissions describing 1 or 2 tracks are limited to a maximum of 4 pages, including all content and references, and must be in PDF format. However, submissions describing more than 3 tracks can have up to 6 pages. 
                         Please use ACM Conference templates (two column format). One recommended setting for Latex file is: <code>\documentclass[sigconf, review]{acmart}</code>. 
                         Template guidelines are here: <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. 
                         <br>
@@ -365,7 +365,7 @@
                         In addition, authors can provide an optional one page supplement at the end of their submitted paper (it needs to be in the same PDF file) 
                         focused on reproducibility. After the submission deadline, the names and order of authors cannot be changed. 
                         </p>
-                        <p>It would be great if you could cite our dataset paper available at <a href="https://arxiv.org/abs/2307.09688">ArXiv</a>. <br>
+                        <p>Our dataset paper is still underway. It would be great if you could cite our dataset paper after it becomes available. <!-- , which is available at <a href="https://arxiv.org/abs/2307.09688">ArXiv</a>. <br>
                         
                         <code>
                             @article{jin2023amazon,<br>
@@ -374,8 +374,8 @@
                                 journal={arXiv preprint arXiv:2307.09688}, <br>
                                 year={2023},<br>
                           }<br>
-                        </code>
-                    If you have any questions, please concat us at jinwei2@msu.edu and xianft@amazon.com. 
+                        </code>-->
+                    If you have any questions, please concat us at yilun.jin@connect.ust.hk and amzzhe@amazon.com. 
                     </div>
                 </div>
             </div>
