--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
                             Please note that the KDD Cup workshop will have <b>no proceedings</b> and the authors retain <b>full rights</b> to submit or post the paper at any other venue.
                         <!-- </p> -->
                         <br>
-                        <br>Link to the submission website: <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
+                        <br>Link to the submission website: <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                         </p>
-                        Submissions describing 1 or 2 tracks are limited to a maximum of 4 pages, including all content and references, and must be in PDF format. However, submissions describing more than 3 tracks can have up to 6 pages. 
+                        Submissions describing solutions to 1 or 2 tracks are limited to a maximum of 4 pages, including all content and references, and must be in PDF format. However, submissions describing solutions to more than 2 tracks can have up to 6 pages. 
                         Please use ACM Conference templates (two column format). One recommended setting for Latex file is: <code>\documentclass[sigconf, review]{acmart}</code>. 
                         Template guidelines are here: <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a>. 
                         <br>
