--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <h2 style="text-align: center;">SUBMISSION GUIDELINES</h2>
                         <p style="text-align: justify;">
                             The objective of this workshop is to discuss the winning submissions of the Amazon KDD Cup 2024: Multi-task Online Shopping Challenge for LLMs. 
-                            Submissions to the workshop <b>single</b>-blind (author names and affiliations should be listed). 
+                            Submissions to the workshop are <b>single</b>-blind (author names and affiliations should be listed). 
                             <b>A team will have a guaranteed opportunity for an in-person oral/poster presentation if the team ranks in top-5 in any one of the 5 tracks.</b>
                             Other submissions will be evaluated by a committee based on their novelty and insights. 
                             The deadline for the submissions is <ins style="color: red;">August 2, 2024</ins> (Anywhere on Earth time).
