--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 					    
 <!--<img src="images/haixun.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> -->
                                          
-<a href="https://shangjingbo1226.github.io/" style="color: black;"><b>Professor Jingbo Shang</b></a>
-                                        <br> Associate Professor at University of California, San Diego
+<a href="https://www.public.asu.edu/~huanliu/" style="color: black;"><b>Professor Huan Liu</b></a>
+                                        <br> Regents Professor, Arizona State University
                                         <br><br><b>Title:</b> TBD
                                         <br><b>Abstract:</b>  TBD<!--In this talk, I will discuss the current status and challenges of product search. In particular, I will highlight the significant effort it takes to create a high-quality product search engine using classical information retrieval methods. Then, I will discuss how recent advances in arge pre-trained language models, may change the status quo. While embedding-based retrieval has the potential to improve classical information retrieval methods, creating a machine learning-based, end-to-end system for general-purpose web search is still extremely difficult. Nevertheless, I will argue that product search for e-commerce may prove to be an area where LLMs can create the first disruption to classical information retrieval systems.--> 
                                     </ul>
@@ -123,8 +123,8 @@
                                   <p class="mb-1">
                                     <ul>
 <!--<img src="images/jian.jpeg" alt="Description of image" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> -->
-<a href="https://amazon-kddcup24.github.io/" style="color: black;"><b>TBD </b></a>
-<br> TBD
+<a href="https://shangjingbo1226.github.io/" style="color: black;"><b>Professor Jingbo Shang </b></a>
+<br> Associate Professor, University of California, San Diego
 <br>
 <br> <b>Title:</b> TBD
 <br> <b>Abstract:</b>  TBD<!--In the ever-evolving landscape of e-commerce, seamless collaboration between multiple parties is essential to offer comprehensive and end-to-end services transcending supplier, provider, and market sector boundaries. A critical aspect of such cooperation lies in the sharing of data and AI models among these parties. However, data and AI model sharing pose significant challenges. In this enlightening talk, I will unveil insightful strategies and blueprints for establishing data and AI markets tailored to the e-commerce domain. These markets will facilitate efficient data and AI model sharing, discovery, and integration. I will delve into the latest technical advancements while addressing the potential hurdles and opportunities. -->
