--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                   <p class="mb-1">
                                     <ul>
 					    
-<!--<img src="images/haixun.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> -->
+--<img src="images/huanliu.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> 
                                          
 <a href="https://www.public.asu.edu/~huanliu/" style="color: black;"><b>Professor Huan Liu</b></a>
                                         <br> Regents Professor, Arizona State University
@@ -122,7 +122,7 @@
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-<!--<img src="images/jian.jpeg" alt="Description of image" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> -->
+<img src="images/jingboshang.jpeg" alt="Description of image" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> 
 <a href="https://shangjingbo1226.github.io/" style="color: black;"><b>Professor Jingbo Shang </b></a>
 <br> Associate Professor, University of California, San Diego
 <br>
