--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                   <p class="mb-1">
                                     <ul>
 					    
---<img src="assets/huanliu.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> 
+<img src="assets/huanliu.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> 
                                          
 <a href="https://www.public.asu.edu/~huanliu/" style="color: black;"><b>Professor Huan Liu</b></a>
                                         <br> Regents Professor, Arizona State University
