--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-<img src="assets/jingboshang.jpeg" alt="Prof. Jingbo Shang" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> 
+<img src="assets/jingboshang.jpg" alt="Prof. Jingbo Shang" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> 
 <a href="https://shangjingbo1226.github.io/" style="color: black;"><b>Professor Jingbo Shang </b></a>
 <br> Associate Professor, University of California, San Diego
 <br>
